# IdeologyWars

./: .replit  README.md  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml
data/: ideologies.json
src/: main.py
src/client/: clear.py  gradient.py
src/components/: component_manager.py  components.py
src/console/: ansi.py
src/templates/: ideology.py  player.py  vessel.py
src/utils/: categorize.py  color.py  json_reader.py  nth_repl.py  tagify.py
