[tool.poetry]
name = "repl_python3_IdeologyWars"
version = "0.1.0"
description = ""
authors = ["AlphaBeta906 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
colour = "^0.1.5"
pyfiglet = "^0.8.post1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
